RESOLVED FIXED76340
[Qt] Fix QT_VERSION related warnings when building on Mac OS X
https://bugs.webkit.org/show_bug.cgi?id=76340
Summary [Qt] Fix QT_VERSION related warnings when building on Mac OS X
Alexander Færøy
Reported 2012-01-14 12:48:25 PST
wtf/Platform.h uses QT_VERSION when build on darwin, but does not include the QtGlobals header. This is required to be fixed before we can enable -Werror on the Mac platform. Patch coming up.
Attachments
Patch (1.26 KB, patch)
2012-01-14 13:01 PST, Alexander Færøy
ahf: review-
ahf: commit-queue-
patch for review. (12.64 KB, patch)
2012-01-16 09:03 PST, Zeno Albisser
vestbo: review+
Alexander Færøy
Comment 1 2012-01-14 13:01:43 PST
Alexander Færøy
Comment 2 2012-01-14 13:02:42 PST
Adding Tor Arne for review.
Noam Rosenthal
Comment 3 2012-01-14 20:35:03 PST
It looked pretty trivial to me, but if torarne wants to have a look it might be good because those builds tend to get fudged
Alexander Færøy
Comment 4 2012-01-14 20:36:13 PST
(In reply to comment #3) > It looked pretty trivial to me, but if torarne wants to have a look it might be good because those builds tend to get fudged Aye, I am just holding on with the CQ? until monday where other people are around too :-)
Alexander Færøy
Comment 5 2012-01-16 04:08:26 PST
Comment on attachment 122556 [details] Patch CQ?
Zeno Albisser
Comment 6 2012-01-16 08:29:25 PST
This bug was caused by r104826. We should revert r104826 and solve the problem as described here: see also: https://bugs.webkit.org/show_bug.cgi?id=57239
Tor Arne Vestbø
Comment 7 2012-01-16 08:54:07 PST
(In reply to comment #6) > This bug was caused by r104826. > > We should revert r104826 and solve the problem as described here: > see also: https://bugs.webkit.org/show_bug.cgi?id=57239 Sounds good!
Zeno Albisser
Comment 8 2012-01-16 09:03:44 PST
Created attachment 122650 [details] patch for review.
Zeno Albisser
Comment 9 2012-01-16 10:17:53 PST
Zeno Albisser
Comment 10 2012-01-20 07:01:02 PST
*** Bug 76175 has been marked as a duplicate of this bug. ***
Note You need to log in before you can comment on or make changes to this bug.