Source/WebKit2/UIProcess/LayerTreeHostProxy.h
@@ -42,11 +42,9 @@ namespace WebKit {
 class WebLayerInfo;
 class WebLayerUpdateInfo;
 
-using namespace WebCore;
-
 class LayerTreeMessageToRenderer;
 
-class LayerTreeHostProxy : public GraphicsLayerClient {
+class LayerTreeHostProxy : public WebCore::GraphicsLayerClient {
 public:
     LayerTreeHostProxy(DrawingAreaProxy*);
     virtual ~LayerTreeHostProxy();
@@ -54,10 +52,10 @@ public:
     void deleteCompositingLayer(WebLayerID);
     void setRootCompositingLayer(WebLayerID);
     void didReceiveMessage(CoreIPC::Connection*, CoreIPC::MessageID, CoreIPC::ArgumentDecoder*);
-    void paintToCurrentGLContext(const TransformationMatrix&, float);
+    void paintToCurrentGLContext(const WebCore::TransformationMatrix&, float);
     void purgeGLResources();
-    void setVisibleContentsRectAndScale(const IntRect&, float);
-    void setVisibleContentRectTrajectoryVector(const FloatPoint&);
+    void setVisibleContentsRectAndScale(const WebCore::IntRect&, float);
+    void setVisibleContentRectTrajectoryVector(const WebCore::FloatPoint&);
 #if USE(TILED_BACKING_STORE)
     void syncRemoteContent();
     void swapContentBuffers();
@@ -68,19 +66,19 @@ public:
     void createDirectlyCompositedImage(int64_t, const WebKit::ShareableBitmap::Handle&);
     void destroyDirectlyCompositedImage(int64_t);
     void didReceiveLayerTreeHostProxyMessage(CoreIPC::Connection*, CoreIPC::MessageID, CoreIPC::ArgumentDecoder*);
-    void setVisibleContentsRectForLayer(WebLayerID, const IntRect&);
+    void setVisibleContentsRectForLayer(WebLayerID, const WebCore::IntRect&);
     void updateViewport();
 #endif
 
 protected:
-    PassOwnPtr<GraphicsLayer> createLayer(WebLayerID);
+    PassOwnPtr<WebCore::GraphicsLayer> createLayer(WebLayerID);
 
-    GraphicsLayer* layerByID(WebLayerID id) { return (id == InvalidWebLayerID) ? 0 : m_layers.get(id); }
-    GraphicsLayer* rootLayer() { return m_rootLayer.get(); }
+    WebCore::GraphicsLayer* layerByID(WebLayerID id) { return (id == InvalidWebLayerID) ? 0 : m_layers.get(id); }
+    WebCore::GraphicsLayer* rootLayer() { return m_rootLayer.get(); }
 
     // Reimplementations from WebCore::GraphicsLayerClient.
-    virtual void notifyAnimationStarted(const GraphicsLayer*, double) { }
-    virtual void notifySyncRequired(const GraphicsLayer*) { }
+    virtual void notifyAnimationStarted(const WebCore::GraphicsLayer*, double) { }
+    virtual void notifySyncRequired(const WebCore::GraphicsLayer*) { }
     virtual bool showDebugBorders() const { return false; }
     virtual bool showRepaintCounter() const { return false; }
     void paintContents(const WebCore::GraphicsLayer*, WebCore::GraphicsContext&, WebCore::GraphicsLayerPaintingPhase, const WebCore::IntRect&) { }
@@ -89,19 +87,19 @@ protected:
     DrawingAreaProxy* m_drawingAreaProxy;
 
     typedef HashMap<WebLayerID, WebCore::GraphicsLayer*> LayerMap;
-    IntRect m_visibleContentsRect;
+    WebCore::IntRect m_visibleContentsRect;
     float m_contentsScale;
 
     MessageQueue<LayerTreeMessageToRenderer> m_messagesToRenderer;
     void pushUpdateToQueue(PassOwnPtr<LayerTreeMessageToRenderer>);
 
 #if USE(TEXTURE_MAPPER)
-    OwnPtr<TextureMapper> m_textureMapper;
+    OwnPtr<WebCore::TextureMapper> m_textureMapper;
 #endif
 
 #if PLATFORM(QT)
-    typedef HashMap<IntPoint, RefPtr<BitmapTexture> > TiledImage;
-    TextureMapperNode::NodeRectMap m_nodeVisualContentsRectMap;
+    typedef HashMap<WebCore::IntPoint, RefPtr<WebCore::BitmapTexture> > TiledImage;
+    WebCore::TextureMapperNode::NodeRectMap m_nodeVisualContentsRectMap;
     HashMap<int, int> m_tileToNodeTile;
     int remoteTileIDToNodeTileID(int tileID) const;
     HashMap<int64_t, TiledImage> m_directlyCompositedImages;
@@ -113,7 +111,7 @@ protected:
     void syncLayerParameters(const WebLayerInfo&);
     void createTile(WebLayerID, int, float scale);
     void removeTile(WebLayerID, int);
-    void updateTile(WebLayerID, int, const IntRect&, const IntRect&, const QImage&);
+    void updateTile(WebLayerID, int, const WebCore::IntRect&, const WebCore::IntRect&, const QImage&);
     void createImage(int64_t, const QImage&);
     void destroyImage(int64_t);
     void assignImageToLayer(WebCore::GraphicsLayer*, int64_t imageID);
@@ -123,12 +121,12 @@ protected:
 
 #endif
 
-    OwnPtr<GraphicsLayer> m_rootLayer;
+    OwnPtr<WebCore::GraphicsLayer> m_rootLayer;
     Vector<WebLayerID> m_layersToDelete;
 
 #if PLATFORM(QT)
-    void didFireViewportUpdateTimer(Timer<LayerTreeHostProxy>*);
-    Timer<LayerTreeHostProxy> m_viewportUpdateTimer;
+    void didFireViewportUpdateTimer(WebCore::Timer<LayerTreeHostProxy>*);
+    WebCore::Timer<LayerTreeHostProxy> m_viewportUpdateTimer;
 #endif
 
     LayerMap m_layers;
